Archive2/a1/3b63215578d063/output
main.cpp:18:15: error: constexpr function never produces a constant expression [-Winvalid-constexpr]
constexpr int func2() {
              ^
main.cpp:19:14: note: non-constexpr constructor 'a' cannot be used in a constant expression
    a<int,3> a1 ;
             ^
main.cpp:4:8: note: declared here
struct a
       ^
main.cpp:29:19: error: constexpr variable 'x' must be initialized by a constant expression
    constexpr int x = func2();
                  ^   ~~~~~~~
main.cpp:21:11: note: assignment to object outside its lifetime is not allowed in a constant expression
  a1.x[0] = 10 ;
          ^
main.cpp:29:23: note: in call to 'func2()'
    constexpr int x = func2();
                      ^
2 errors generated.
